[package]
name = "magic_set"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
bevy = { git = "https://github.com/bevyengine/bevy.git" }
# iyes_loopless = "0.9"
bevy_ecs_tilemap = { git = "https://github.com/odecay/bevy_ecs_tilemap", features = [ "atlas" ]}

# leafwing-input-manager = "0.5.0"
# bevy-inspector-egui = { version = "0.14", optional = true }

[features]
defualt = []
# debug = ["bevy-inspector-egui"]

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
